BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_NEM_ImpactedDevice__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Impacted Devices</relationshipLabel>
        <relationshipName>Impacted_Devices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Impacted_Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Impacted Device</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Impacted Devices</relationshipLabel>
        <relationshipName>Impacted_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Impacted_Location_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Impacted Location Account</label>
        <referenceTo>HSvc_NEM_ImpactedLocation__c</referenceTo>
        <relationshipLabel>Impacted Devices</relationshipLabel>
        <relationshipName>Impacted_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Impacted Device</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>Impacted  Device ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Impacted Devices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>